# alkemi

./: .envrc  Cargo.toml  LICENSE.md  README.md  TODO.md  shell.nix
assets/: character_material.wgsl
crates/remagic/: Cargo.toml
crates/remagic/src/: lib.rs  xnb.rs
crates/remagic/src/xnb/: types.rs
crates/remagic/src/xnb_readers/: magicka_character.rs  magicka_common.rs  magicka_content.rs  magicka_effect.rs  magicka_item.rs  magicka_mesh.rs  skinning.rs  xna_mesh.rs  xna_tex.rs
src/: camera.rs  character.rs  components_basic.rs  dev.rs  dialog.rs  gameplay.rs  item.rs  magicka_assets.rs  magicka_level_model.rs  magicka_scene.rs  main.rs  scene.rs  script_triggers.rs
src/character/: agent.rs  model.rs  player.rs
src/dev/: console.rs
src/gameplay/: damage.rs  damage_over_time.rs
src/magicka_assets/: character_template.rs  image.rs  item.rs  skinned_model.rs  visual_effect.rs
src/magicka_level_model/: animated_parts.rs  bitree.rs  collision.rs  d3dx.rs  effect.rs  light.rs  liquid.rs  nav_mesh.rs  visual_effects.rs  xna_geom.rs
src/script_triggers/: action.rs  condition.rs
src/script_triggers/action/: avatar_move.rs  change_scene.rs  execute_trigger_action.rs  play_animation.rs  spawn_character.rs
src/script_triggers/condition/: dialog_done.rs  present.rs
src/spelling/: casting.rs  chanting.rs  chanting_ui.rs  chanting_vfx.rs  color.rs  element.rs  input.rs  mod.rs  spell_resolve.rs  spells.rs  status.rs
src/spelling/spells/: beam.rs  lightning.rs  shield.rs  spray.rs
src/spelling/spells/lightning/vfx/: blackbody.rs
